--- a/src/main/resources/templates/hausse/hausseCommentaireLotForm.html
+++ b/src/main/resources/templates/hausse/hausseCommentaireLotForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:replace="~{include :: localejsdatetimepicker}"></script>
+<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('commentaire').focus();
 			$('#evenementForm').validate({
@@ -26,25 +26,26 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
 		<div class="row">
 			<h1 class="item">
 				<a th:href="@{'/hausse/liste'}" th:text="#{Hausses}"></a>
-				<th:block th:text="#{sep} + #{commentaireLot} + ' ' + ${haussesNoms}">
+				<th:block
+					th:text="#{sep} + #{commentaireLot} + ' ' + ${haussesNoms}">
 			</h1>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/hausse/sauve/lot/'+${hIds}}" method="post" id="evenementForm">
-		<input type="hidden" id="valeur" name="valeur" />
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIREHAUSSE" />
+	<form action="#" th:action="@{'/evenement/hausse/sauve/lot/'+${hIds}}"
+		method="post" id="evenementForm">
+		<input type="hidden" id="valeur" name="valeur" /> <input
+			type="hidden" id="typeEvenement" name="typeEvenement"
+			value="COMMENTAIREHAUSSE" />
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
