--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		const notListEmpty = /*[[${not #lists.isEmpty(ruchers)}]]*/ null;
 		const pnnonsupp = /*[[#{personnenonsupprimeerefrrucher}]]*/ null;
 		const supppers = /*[[#{supprimercettepersonne}]]*/ null;
@@ -34,7 +34,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -46,10 +45,11 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/personne/modifie/'+${personne.id}}" class="bi-pencil" th:title="#{modifier}"
+				<a th:href="@{'/personne/modifie/'+${personne.id}}"
+					class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></a> <a
+					id="supprime" th:href="@{'/personne/supprime/'+${personne.id}}"
+					class="bi-trash" th:title="#{supprimer}" style="color: red"
 					aria-hidden="true"></a>
-				<a id="supprime" th:href="@{'/personne/supprime/'+${personne.id}}" class="bi-trash"
-					th:title="#{supprimer}" style="color:red" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -74,14 +74,16 @@
 					<td th:text="${personne.adresse}"></td>
 					<td th:text="${personne.login}"></td>
 					<td th:text="${personne.roles}"></td>
-					<td th:if="${session.voirInactif}" th:text="${personne.active}? #{oui} : #{non}"></td>
+					<td th:if="${session.voirInactif}"
+						th:text="${personne.active}? #{oui} : #{non}"></td>
 				</tr>
 			</tbody>
 		</table>
 		<h6 th:unless="${#arrays.length(ruchers)}" th:text="#{Pasderucher}"></h6>
 		<th:block th:if="${#arrays.length(ruchers)}">
 			<h6 th:text="#{contactRuchers}"></h6>
-			<table class="table table-sm table-bordered table-striped" id="ruchers">
+			<table class="table table-sm table-bordered table-striped"
+				id="ruchers">
 				<thead>
 					<tr>
 						<th th:text="#{nom}"></th>
@@ -91,8 +93,10 @@
 				</thead>
 				<tbody>
 					<tr th:each="rucher : ${ruchers}">
-						<td><a th:href="@{'/rucher/'+${rucher.id}}" th:text="${rucher.nom}"></a></td>
-						<td th:if="${session.voirInactif}" th:text="${rucher.actif}? #{oui} : #{non}"></td>
+						<td><a th:href="@{'/rucher/'+${rucher.id}}"
+							th:text="${rucher.nom}"></a></td>
+						<td th:if="${session.voirInactif}"
+							th:text="${rucher.actif}? #{oui} : #{non}"></td>
 						<td th:text="${rucher.adresse}"></td>
 					</tr>
 				</tbody>
@@ -101,5 +105,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
