--- a/src/main/resources/templates/ruchetype/rucheTypeForm.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeForm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		const rucheTypeNoms = /*[[${rucheTypeNoms}]]*/null;
 		const nomexiste = /*[[#{nomexiste}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
@@ -32,7 +32,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -43,19 +42,22 @@
 					<th:block th:text="#{sep} + #{Ajout}"></th:block>
 				</h1>
 				<h1 class="item" th:if="${rucheType.id}">
-					<a th:href="@{'/rucheType/'+${rucheType.id}}" th:text="#{rucheType} + ' ' + ${rucheType.nom}"></a>
+					<a th:href="@{'/rucheType/'+${rucheType.id}}"
+						th:text="#{rucheType} + ' ' + ${rucheType.nom}"></a>
 					<th:block th:text="#{sep} + #{modification}"></th:block>
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{/rucheType/sauve}" th:object="${rucheType}" method="post" id="rucheTypeForm">
-		<input type="hidden" th:field="*{id}" />
-		<input type="hidden" th:field="*{version}" />
+	<form action="#" th:action="@{/rucheType/sauve}"
+		th:object="${rucheType}" method="post" id="rucheTypeForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden"
+			th:field="*{version}" />
 		<div th:replace="~{includeForm :: nomField}"></div>
 		<div class="form-floating mb-3">
-			<input placeholder="" class="form-control" type="number" th:field="*{nbCadresMax}"
-				th:errorclass="fieldError" id="nbCadresMax" name="nbCadresMax" /> <label class="form-label"
+			<input placeholder="" class="form-control" type="number"
+				th:field="*{nbCadresMax}" th:errorclass="fieldError"
+				id="nbCadresMax" name="nbCadresMax" /> <label class="form-label"
 				for="nbCadresMax" th:text="#{nbCadresMax}"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
@@ -63,5 +65,4 @@
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
