--- a/src/main/resources/templates/essaim/essaimSucreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreLotForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:replace="~{include :: localejsdatetimepicker}"></script>
+<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('valeur').focus();
 			$('#evenementForm').validate({
@@ -29,7 +29,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -37,13 +36,17 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
-					<th:block th:text="#{sep} + #{ajoutSucreLot} + ' ' + ${essaimsNoms}">
+					<th:block
+						th:text="#{sep} + #{ajoutSucreLot} + ' ' + ${essaimsNoms}">
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="ESSAIMSUCRE" />
+	<form action="#"
+		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post"
+		id="evenementForm">
+		<input type="hidden" id="typeEvenement" name="typeEvenement"
+			value="ESSAIMSUCRE" />
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: poidskg}"></div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
@@ -51,5 +54,4 @@
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
