--- a/src/main/resources/templates/evenement/evenementCadreDetail.html
+++ b/src/main/resources/templates/evenement/evenementCadreDetail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener('click', event => {
@@ -14,7 +14,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -23,16 +22,19 @@
 			<div class="col">
 				<a th:href="@{'/evenement/ruche/cadre/modifie/'+${evenement.id}}">
 					<span class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
-				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
-						class="bi-pencil" style="color: red" th:title="#{modifierTout}" aria-hidden="true"></span>
-				</a><a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"><span class="bi-trash"
-						style="color: red" th:title="#{supprimer}" aria-hidden="true"></span>
-				</a>
+				</a>&nbsp; <a
+					th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}">
+					<span class="bi-pencil" style="color: red"
+					th:title="#{modifierTout}" aria-hidden="true"></span>
+				</a><a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"><span
+					class="bi-trash" style="color: red" th:title="#{supprimer}"
+					aria-hidden="true"></span> </a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid table-responsive">
-		<table class="table table-sm table-bordered table-striped" id="evenements">
+		<table class="table table-sm table-bordered table-striped"
+			id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
@@ -46,9 +48,12 @@
 			<tbody>
 				<tr>
 					<td th:text="#{${evenement.type}}"></td>
-					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}" th:text="${evenement.ruche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}" th:text="${evenement.essaim?.nom}"></a></td>
-					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}" th:text="${evenement.rucher?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}"
+						th:text="${evenement.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
+						th:text="${evenement.essaim?.nom}"></a></td>
+					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
+						th:text="${evenement.rucher?.nom}"></a></td>
 					<td class="num" th:text="${evenement.valeur}"></td>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>
@@ -57,5 +62,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
