--- a/src/main/resources/templates/evenement/evenementCommRucheDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommRucheDetail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener('click', event => {
@@ -14,25 +14,29 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
 		<div class="row">
 			<div th:replace="~{include::evedettitre}"></div>
 			<div class="col">
-				<a th:href="@{'/evenement/ruche/commentaire/modifie/'+${evenement.id}}">
+				<a
+					th:href="@{'/evenement/ruche/commentaire/modifie/'+${evenement.id}}">
 					<span class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
-				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
-						class="bi-pencil" style="color: red" th:title="#{modifierTout}" aria-hidden="true"></span>
+				</a>&nbsp; <a
+					th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}">
+					<span class="bi-pencil" style="color: red"
+					th:title="#{modifierTout}" aria-hidden="true"></span>
 				</a><a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}">
-					<span class="bi-trash" style="color: red" th:title="#{supprimer}" aria-hidden="true"></span>
+					<span class="bi-trash" style="color: red" th:title="#{supprimer}"
+					aria-hidden="true"></span>
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid table-responsive">
-		<table class="table table-sm table-bordered table-striped" id="evenements"
+		<table class="table table-sm table-bordered table-striped"
+			id="evenements"
 			th:with="val=${#strings.equals(evenement.valeur,'')?'':#strings.substring(evenement.valeur, 0, 1)}">
 			<thead>
 				<tr>
@@ -42,8 +46,7 @@
 					<th th:text="#{rucher}"></th>
 					<th:block th:switch="${val}">
 						<th:block th:case="''"></th:block>
-						<th th:case="'-'" th:text="#{NotificationJoursApres}">
-						</th>
+						<th th:case="'-'" th:text="#{NotificationJoursApres}"></th>
 						<th th:case="*" th:text="#{NotificationJoursAvant}"></th>
 					</th:block>
 					<th th:text="#{commentaire}"></th>
@@ -52,12 +55,16 @@
 			<tbody>
 				<tr>
 					<td th:text="#{${evenement.type}}"></td>
-					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}" th:text="${evenement.ruche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}" th:text="${evenement.essaim?.nom}"></a></td>
-					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}" th:text="${evenement.rucher?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}"
+						th:text="${evenement.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
+						th:text="${evenement.essaim?.nom}"></a></td>
+					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
+						th:text="${evenement.rucher?.nom}"></a></td>
 					<th:block th:switch="${val}">
 						<th:block th:case="''"></th:block>
-						<td th:case="'-'" class="num" th:text="${#strings.substring(evenement.valeur, 1)}"></td>
+						<td th:case="'-'" class="num"
+							th:text="${#strings.substring(evenement.valeur, 1)}"></td>
 						<td th:case="*" class="num" th:text="${evenement.valeur}"></td>
 					</th:block>
 					<td th:text="${evenement.commentaire}"></td>
@@ -67,5 +74,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
