--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -1,19 +1,18 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsruches}"></script>
-	<script th:inline="javascript">
-		/* exported
-		url, Evenements, Notifications, btp, btc */
-		const url = /*[[@{'/evenement/listeNotif/'}]]*/null;
-		const Evenements = /*[[#{evenements}]]*/ null;
-		const Notifications = /*[[#{Notifications}]]*/ null;
-		const btp = /*[[#{buttontextprint}]]*/null;
-		const btc = /*[[#{buttontextcol}]]*/null;
-	</script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
+<script th:inline="javascript">
+	/* exported
+	url, Evenements, Notifications, btp, btc */
+	const url = /*[[@{'/evenement/listeNotif/'}]]*/null;
+	const Evenements = /*[[#{evenements}]]*/null;
+	const Notifications = /*[[#{Notifications}]]*/null;
+	const btp = /*[[#{buttontextprint}]]*/null;
+	const btc = /*[[#{buttontextcol}]]*/null;
+</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -22,17 +21,18 @@
 				<h1 class="item" th:text="#{Notifications}"></h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
-					role="button" th:attr="data-bs-content=${dests}"></a>
-				<span class="padicons">
-					<input type="checkbox" id="tous" th:title="#{tous}" th:checked="${tous}" /> <label for="tous"
-						th:text="#{tous}"></label>
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
+					data-bs-trigger="focus" tabindex="0" role="button"
+					th:attr="data-bs-content=${dests}"></a> <span class="padicons">
+					<input type="checkbox" id="tous" th:title="#{tous}"
+					th:checked="${tous}" /> <label for="tous" th:text="#{tous}"></label>
 				</span>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm" id="evenementsnotif">
+		<table class="table table-bordered table-striped table-sm"
+			id="evenementsnotif">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
@@ -47,8 +47,9 @@
 			</thead>
 			<tbody>
 				<tr th:each="evenement : ${evenements}">
-					<td><a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}}"></a></td>
+					<td><a
+						th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${evenement.id}}"></a></td>
 					<td th:text="#{${evenement.type}}"></td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
@@ -62,5 +63,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
