--- a/src/main/resources/templates/evenement/evenementRemplissageHausseListe.html
+++ b/src/main/resources/templates/evenement/evenementRemplissageHausseListe.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: moment}"></script>
-	<script th:replace="~{include :: jquerydaterangepicker}"></script>
-	<link th:replace="~{include :: cssjquerydaterangepicker}" />
-	<script th:replace="~{include :: jsruchesnom('evenementListe')}"></script>
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: moment}"></script>
+<script th:replace="~{include :: jquerydaterangepicker}"></script>
+<link th:replace="~{include :: cssjquerydaterangepicker}" />
+<script th:replace="~{include :: jsruchesnom('evenementListe')}"></script>
+<script th:inline="javascript">
 		/* exported Evenements, buttontextprint, buttontextcol */
 		/* globals evenementListe */
 		const Evenements = /*[[#{evenementremplissagehausse}]]*/ null;
@@ -15,7 +15,6 @@
 		document.addEventListener('DOMContentLoaded', () => evenementListe(true));
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -23,24 +22,17 @@
 			<div class="col">
 				<h1 class="item" th:text="#{evenementremplissagehausse}"></h1>
 			</div>
-			<div th:insert="~{includeForm :: evenementListeDates(retController='/evenement/hausse/listeRemplissageHausse')}"
-				class="col">
-			</div>
+			<div
+				th:insert="~{includeForm :: evenementListeDates(retController='/evenement/hausse/listeRemplissageHausse')}"
+				class="col"></div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm" id="evenements">
+		<table class="table table-bordered table-striped table-sm"
+			id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<!--/*
-					<th th:text="#{ruche}"></th>
-					<th th:text="#{essaim}"></th>
-					<th th:text="#{rucher}"></th>
-					<th th:text="#{hausse}"></th>
-					<th th:text="#{remplissage}"></th>
-					<th th:text="#{commentaire}"></th>
-					*/-->
 					<th th:text="#{ruche}"></th>
 					<th th:text="#{essaim}"></th>
 					<th th:text="#{rucher}"></th>
@@ -51,9 +43,9 @@
 			</thead>
 			<tbody>
 				<tr th:each="evenement : ${evenements}">
-					<td>
-						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}+'?type=remplissage'}"></a>
+					<td><a
+						th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${evenement.id}+'?type=remplissage'}"></a>
 					</td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
@@ -67,5 +59,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
