--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script th:replace="~{include :: jsruches}"></script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:replace="~{include :: localejsdatetimepicker}"></script>
+<script th:replace="~{include :: jsruches}"></script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -25,26 +24,29 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{/recolte/sauve}" th:object="${recolte}" method="post" id="recolteForm">
+	<form action="#" th:action="@{/recolte/sauve}" th:object="${recolte}"
+		method="post" id="recolteForm">
 		<input type="hidden" th:field="*{id}" />
 		<div class="form-floating mb-3">
-			<input class="form-control" type="text" th:field="*{date}" th:errorclass="fieldError" placeholder="" />
-			<label class="form-label" th:text="#{date}" for="date"></label>
+			<input class="form-control" type="text" th:field="*{date}"
+				th:errorclass="fieldError" placeholder="" /> <label
+				class="form-label" th:text="#{date}" for="date"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<select class="form-control" th:field="*{typeMiel}">
-				<option th:each="type : ${T(ooioo.ruches.recolte.TypeMiel).values()}" th:value="${type}"
-					th:text="#{${type}}"></option>
+				<option
+					th:each="type : ${T(ooioo.ruches.recolte.TypeMiel).values()}"
+					th:value="${type}" th:text="#{${type}}"></option>
 			</select> <label class="form-label" th:text="#{typeMiel}" for="typeMiel"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<input class="form-control" placeholder="" type="number" step="0.001" min="0" th:field="*{poidsMiel}"
-				th:errorclass="fieldError" /> <label class="form-label" th:text="#{poidsMiel}" for="poidsMiel"></label>
+			<input class="form-control" placeholder="" type="number" step="0.001"
+				min="0" th:field="*{poidsMiel}" th:errorclass="fieldError" /> <label
+				class="form-label" th:text="#{poidsMiel}" for="poidsMiel"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
