--- a/src/main/resources/templates/recolte/recolteMielForm.html
+++ b/src/main/resources/templates/recolte/recolteMielForm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		const pdsAvSupPdsAp = /*[[#{poidsAvantSupPoidsApres}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
 			const avant = document.querySelectorAll('input.avant');
@@ -38,30 +38,28 @@
 			}
 		});
 	</script>
-	<style>
-		.changed {
-			background-color: #a67c00;
-		}
+<style>
+.changed {
+	background-color: #a67c00;
+}
 
-		.modif {
-			width: 6em;
-		}
+.modif {
+	width: 6em;
+}
 
-		/* Suppression de fleches de changement des poids de miel */
-		/* Chrome, Safari, Edge, Opera */
-		input::-webkit-outer-spin-button,
-		input::-webkit-inner-spin-button {
-			-webkit-appearance: none;
-			margin: 0;
-		}
+/* Suppression de fleches de changement des poids de miel */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
 
-		/* Firefox */
-		input[type="number"] {
-			-moz-appearance: textfield;
-		}
-	</style>
+/* Firefox */
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+</style>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -74,8 +72,11 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/recolte/haussesMiel/sauve/'+${recolte.id}}" method="post" id="recolteMielForm">
-		<table class="table table-sm table-bordered table-striped" id="recolteMielTable">
+	<form action="#"
+		th:action="@{'/recolte/haussesMiel/sauve/'+${recolte.id}}"
+		method="post" id="recolteMielForm">
+		<table class="table table-sm table-bordered table-striped"
+			id="recolteMielTable">
 			<thead>
 				<tr>
 					<th hidden></th>
@@ -86,17 +87,20 @@
 			</thead>
 			<tbody>
 				<tr th:each="rHM, itemStat : ${recolteMiel.recolteHaussesMiel}">
-					<td hidden><input type="number" th:name="|recolteHaussesMiel[${itemStat.index}].recolteHausseId|"
-							th:value="${rHM.recolteHausseId}" /></td>
+					<td hidden><input type="number"
+						th:name="|recolteHaussesMiel[${itemStat.index}].recolteHausseId|"
+						th:value="${rHM.recolteHausseId}" /></td>
 					<td th:text="${hausses[itemStat.index].nom}"></td>
-					<td><input type="number" class="modif avant" th:min="${hausses[itemStat.index].poidsVide}" max="80"
-							step="0.001" required="required"
-							th:name="|recolteHaussesMiel[${itemStat.index}].poidsAvant|" th:value="${rHM.poidsAvant}"
-							th:data-initval="${rHM.poidsAvant}" /></td>
-					<td><input type="number" class="modif apres" th:min="${hausses[itemStat.index].poidsVide}" max="80"
-							step="0.001" required="required"
-							th:name="|recolteHaussesMiel[${itemStat.index}].poidsApres|" th:value="${rHM.poidsApres}"
-							th:data-initval="${rHM.poidsApres}" /></td>
+					<td><input type="number" class="modif avant"
+						th:min="${hausses[itemStat.index].poidsVide}" max="80"
+						step="0.001" required="required"
+						th:name="|recolteHaussesMiel[${itemStat.index}].poidsAvant|"
+						th:value="${rHM.poidsAvant}" th:data-initval="${rHM.poidsAvant}" /></td>
+					<td><input type="number" class="modif apres"
+						th:min="${hausses[itemStat.index].poidsVide}" max="80"
+						step="0.001" required="required"
+						th:name="|recolteHaussesMiel[${itemStat.index}].poidsApres|"
+						th:value="${rHM.poidsApres}" th:data-initval="${rHM.poidsApres}" /></td>
 				</tr>
 			</tbody>
 		</table>
@@ -104,5 +108,4 @@
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
