--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -1,26 +1,25 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsruches}"></script>
-	<script th:replace="~{include :: jsChart}"></script>
-	<script th:replace="~{include :: d3-color}"></script>
-	<script th:replace="~{include :: d3-interpolate}"></script>
-	<script th:replace="~{include :: d3-scale-chromatic}"></script>
-	<script th:inline="javascript">
-		/* exported Chart, Hausses, Pots, HaussesEssaim,
-			poidsMielHausses, poidsMielPots, debutAnnee, nbIEssaims
-		*/
-		const poidsMielHausses = /*[[${poidsMielHausses}]]*/null;
-		const poidsMielPots = /*[[${poidsMielPots}]]*/null;
-		const debutAnnee = /*[[${debutAnnee}]]*/null;
-		const nbIEssaims = /*[[${nbIEssaims}]]*/null;
-		const Hausses = /*[[#{Hausses}]]*/null;
-		const Pots = /*[[#{Pots}]]*/null;
-		const HaussesEssaim = /*[[#{HaussesEssaim}]]*/null;
-	</script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
+<script th:replace="~{include :: jsChart}"></script>
+<script th:replace="~{include :: d3-color}"></script>
+<script th:replace="~{include :: d3-interpolate}"></script>
+<script th:replace="~{include :: d3-scale-chromatic}"></script>
+<script th:inline="javascript">
+	/* exported Chart, Hausses, Pots, HaussesEssaim,
+		poidsMielHausses, poidsMielPots, debutAnnee, nbIEssaims
+	 */
+	const poidsMielHausses = /*[[${poidsMielHausses}]]*/null;
+	const poidsMielPots = /*[[${poidsMielPots}]]*/null;
+	const debutAnnee = /*[[${debutAnnee}]]*/null;
+	const nbIEssaims = /*[[${nbIEssaims}]]*/null;
+	const Hausses = /*[[#{Hausses}]]*/null;
+	const Pots = /*[[#{Pots}]]*/null;
+	const HaussesEssaim = /*[[#{HaussesEssaim}]]*/null;
+</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -29,8 +28,8 @@
 				<h1 class="item">
 					<a th:href="@{'/recolte/liste'}" th:text="#{Recoltes}"></a>
 					<th:block th:text="#{sep}+#{PoidsMielAnneeKg}"></th:block>
-					&nbsp; <a th:href="@{#{urldoc}+'3836_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
-						aria-hidden="true"></a>
+					&nbsp; <a th:href="@{#{urldoc}+'3836_3476563104'}" class="bi-book"
+						th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 				</h1>
 			</div>
 		</div>
@@ -38,5 +37,4 @@
 	<canvas id="ctx"></canvas>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
