--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:inline="javascript">
 		const rucheNoms = /*[[${rucheNoms}]]*/null;
 		const nomexiste = /*[[#{nomexiste}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
@@ -39,7 +39,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -50,29 +49,34 @@
 					<th:block th:text="#{sep} + #{Ajout}"></th:block>
 				</h1>
 				<h1 class="item" th:if="${ruche.id}">
-					<a th:href="@{'/ruche/'+${ruche.id}}" th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+					<a th:href="@{'/ruche/'+${ruche.id}}"
+						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 					<th:block th:text="#{sep} + #{modification}"></th:block>
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{/ruche/sauve}" th:object="${ruche}" method="post" id="rucheForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{essaim}" /> <input type="hidden"
-			th:field="*{rucher}" />
+	<form action="#" th:action="@{/ruche/sauve}" th:object="${ruche}"
+		method="post" id="rucheForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden"
+			th:field="*{essaim}" /> <input type="hidden" th:field="*{rucher}" />
 		<div th:replace="~{includeForm :: nomField}"></div>
 		<div th:replace="~{includeForm :: activeField}"></div>
 		<div class="form-check">
-			<input class="form-check-input" type="checkbox" th:field="*{production}" />
-			<label class="form-check-label" for="production" th:text="#{Production}"></label>
+			<input class="form-check-input" type="checkbox"
+				th:field="*{production}" /> <label class="form-check-label"
+				for="production" th:text="#{Production}"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<input class="form-control" placeholder="15.000" type="number" step="0.001" min="0" max="80"
-				th:field="*{poidsVide}" th:errorclass="fieldError" /> <label class="form-label" for="poidsVide"
-				th:text="#{poidskg}"></label>
+			<input class="form-control" placeholder="15.000" type="number"
+				step="0.001" min="0" max="80" th:field="*{poidsVide}"
+				th:errorclass="fieldError" /> <label class="form-label"
+				for="poidsVide" th:text="#{poidskg}"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<select class="form-control" th:field="*{type}">
-				<option th:each="type : ${rucheTypes}" th:value="${type.id}" th:text="${type.nom}"></option>
+				<option th:each="type : ${rucheTypes}" th:value="${type.id}"
+					th:text="${type.nom}"></option>
 			</select> <label class="form-label" for="type" th:text="#{type}"></label>
 		</div>
 		<div th:replace="~{includeForm :: dateAcquisitionField}"></div>
@@ -83,5 +87,4 @@
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
