--- a/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:replace="~{include :: localejsdatetimepicker}"></script>
+<script th:inline="javascript">
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('commentaire').focus();
 			$('#evenementForm').validate({
@@ -25,7 +25,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -33,19 +32,20 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{hausseXX(${hausse.nom})}"></th:block>
-					<a th:href="@{'/ruche/hausses/'+${ruche.id}}" th:text="#{retraitDeLaruche(${ruche.nom})}"></a>
+					<a th:href="@{'/ruche/hausses/'+${ruche.id}}"
+						th:text="#{retraitDeLaruche(${ruche.nom})}"></a>
 
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausse.id}}" method="post"
-		id="evenementForm">
+	<form action="#"
+		th:action="@{'/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausse.id}}"
+		method="post" id="evenementForm">
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
