--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:replace="~{include :: localejsdatetimepicker}"></script>
+<script th:inline="javascript">
 		const dateFirst = /*[[${dateFirst}]]*/null;
 		const timeFirst = /*[[${timeFirst}]]*/null;
 		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
@@ -37,26 +37,30 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/ruche/'+${rucheId}}" th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+					<a th:href="@{'/ruche/'+${rucheId}}"
+						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 					<th:block th:text="#{sep}+#{changerDeRucher}"></th:block>
 				</h1>
-				<p th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
+				<p
+					th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
 				</p>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}" method="post" id="evenementForm">
+	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}"
+		method="post" id="evenementForm">
 		<div th:replace="~{includeForm :: date}"></div>
 		<div class="form-floating mb-3">
-			<select class="form-control" id="rucherId" name="rucherId" th:field="${ruche.rucher}">
-				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}" th:text="${rucheropt.nom}"></option>
+			<select class="form-control" id="rucherId" name="rucherId"
+				th:field="${ruche.rucher}">
+				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
+					th:text="${rucheropt.nom}"></option>
 			</select> <label class="form-label" for="rucher" th:text="#{rucher}"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
@@ -64,5 +68,4 @@
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
