--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		/* globals DataTable */
 		const depotNPES = /*[[#{depotNePeutEtreSupprime}]]*/ null;
 		const rucherNSRR = /*[[#{ruchernonsupprimerefrecolte}]]*/ null;
@@ -54,7 +54,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -66,28 +65,30 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/rucher/modifie/'+${rucher.id}}" class="bi-pencil" th:title="#{modifier}"
+				<a th:href="@{'/rucher/modifie/'+${rucher.id}}" class="bi-pencil"
+					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/rucher/Gg/'+${rucher.id}}" class="bi-google"
+					th:title="#{carteGg}" aria-hidden="true"></a> <a
+					th:href="@{'/rucher/Ign/'+${rucher.id}}" th:title="#{carteIgn}"
+					aria-hidden="true"><img th:src="@{'/images/france.svg'}"
+					style="margin-bottom: 3px;" /></a> <a
+					th:href="@{'/rucher/Osm/'+${rucher.id}}" class="bi-globe"
+					th:title="#{carteOsm}" aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/rucher/meteo/'+${rucher.id}}" class="bi-sun"
+					th:title="#{meteo}" aria-hidden="true"></a> <a id="ajoutRuches"
+					th:href="@{'/rucher/ruches/'+${rucher.id}}" class="bi-grid-3x2-gap"
+					th:title="#{ajoutRuches}" aria-hidden="true"></a> <a id="supprime"
+					th:href="@{'/rucher/supprime/'+${rucher.id}}" class="bi-trash"
+					style="color: red" th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
+				<a th:href="@{'/evenement/rucher/'+${rucher.id}}"
+					class="padicons bi-list-ul" th:title="#{evenements}"
+					aria-hidden="true"></a> <a
+					th:href="@{'/evenement/rucher/commentaire/cree/'+${rucher.id}}"
+					class="bi-chat-text" th:title="#{evenementCommentaire}"
+					aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}"
+					class="bi-truck-front" th:title="#{transhumances}"
 					aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{'/rucher/Gg/'+${rucher.id}}" class="bi-google" th:title="#{carteGg}"
-					aria-hidden="true"></a>
-				<a th:href="@{'/rucher/Ign/'+${rucher.id}}" th:title="#{carteIgn}" aria-hidden="true"><img
-						th:src="@{'/images/france.svg'}" style="margin-bottom: 3px;" /></a>
-				<a th:href="@{'/rucher/Osm/'+${rucher.id}}" class="bi-globe" th:title="#{carteOsm}"
-					aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{'/rucher/meteo/'+${rucher.id}}" class="bi-sun" th:title="#{meteo}" aria-hidden="true"></a>
-				<a id="ajoutRuches" th:href="@{'/rucher/ruches/'+${rucher.id}}" class="bi-grid-3x2-gap"
-					th:title="#{ajoutRuches}" aria-hidden="true"></a>
-				<a id="supprime" th:href="@{'/rucher/supprime/'+${rucher.id}}" class="bi-trash" style="color:red"
-					th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
-				<a th:href="@{'/evenement/rucher/'+${rucher.id}}" class="padicons bi-list-ul" th:title="#{evenements}"
-					aria-hidden="true"></a>
-				<a th:href="@{'/evenement/rucher/commentaire/cree/'+${rucher.id}}" class="bi-chat-text"
-					th:title="#{evenementCommentaire}" aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}" class="bi-truck-front"
-					th:title="#{transhumances}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -114,15 +115,18 @@
 				<tr>
 					<td th:text="${rucher.actif}? #{oui} : #{non}"></td>
 					<td th:text="${rucher.depot}? #{oui} : #{non}"></td>
-					<td><a th:href="@{'/personne/'+${rucher.contact?.id}}" th:text="${rucher.contact?.nom}"></a></td>
+					<td><a th:href="@{'/personne/'+${rucher.contact?.id}}"
+						th:text="${rucher.contact?.nom}"></a></td>
 					<td th:text="${rucher.adresse}"></td>
-					<td><a class="num" th:href="@{'geo:'+${rucher.latitude}+','+${rucher.longitude}}"
-							th:text="${#numbers.formatDecimal(rucher.latitude,1,4)}"></a></td>
-					<td class="num" th:text="${#numbers.formatDecimal(rucher.longitude,1,4)}"></td>
+					<td><a class="num"
+						th:href="@{'geo:'+${rucher.latitude}+','+${rucher.longitude}}"
+						th:text="${#numbers.formatDecimal(rucher.latitude,1,4)}"></a></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(rucher.longitude,1,4)}"></td>
 					<td class="num" th:text="${rucher.altitude}"></td>
 					<th:block th:if="${rucher.depot or dist != null}">
 						<td><a th:href="@{'/rucher/dists/'+${rucher.id}}"
-								th:text="${rucher.depot}?'0.000':${#numbers.formatDecimal(dist,1,3)}"></a>
+							th:text="${rucher.depot}?'0.000':${#numbers.formatDecimal(dist,1,3)}"></a>
 						</td>
 						<td th:text="${#temporals.format(temps, 'HH:mm')}"></td>
 					</th:block>
@@ -139,18 +143,19 @@
 						<h6 class="item" th:if="${nbHausses}"
 							th:text="#{listeXRuches(${#arrays.length(ruches)})} + '. ' + #{nbXHausses(${nbHausses})}">
 						</h6>
-						<h6 class="item" th:unless="${nbHausses}" th:text="#{listeXRuches(${#arrays.length(ruches)})}">
-						</h6>
+						<h6 class="item" th:unless="${nbHausses}"
+							th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
 					</div>
 					<div class="col">
-						<a th:href="@{'/rucher/poidsruches/'+${rucher.id}}" class="bi-table" th:title="#{creerPesee}"
-							aria-hidden="true"></a>
-						&nbsp; <a th:href="@{'/rucher/poids/'+${rucher.id}}" class="bi-graph-up"
-							th:title="#{courbePoids}" aria-hidden="true"></a>
+						<a th:href="@{'/rucher/poidsruches/'+${rucher.id}}"
+							class="bi-table" th:title="#{creerPesee}" aria-hidden="true"></a>
+						&nbsp; <a th:href="@{'/rucher/poids/'+${rucher.id}}"
+							class="bi-graph-up" th:title="#{courbePoids}" aria-hidden="true"></a>
 					</div>
 				</div>
 			</div>
-			<table class="table table-sm table-bordered table-striped" id="ruches">
+			<table class="table table-sm table-bordered table-striped"
+				id="ruches">
 				<thead>
 					<tr>
 						<th th:text="#{ruche}"></th>
@@ -166,12 +171,17 @@
 					</tr>
 				</thead>
 				<tbody th:with="f='dd/MM/yyyy'">
-					<tr th:each="ruche, i : ${ruches}" th:with="ec=${listeEvenCadre[i.index]}">
-						<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
-						<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}" th:text="${ruche.essaim?.nom}"></a></td>
-						<td th:if="${session.voirInactif}" th:text="${ruche.active}? #{oui} : #{non}"></td>
+					<tr th:each="ruche, i : ${ruches}"
+						th:with="ec=${listeEvenCadre[i.index]}">
+						<td><a th:href="@{'/ruche/'+${ruche.id}}"
+							th:text="${ruche.nom}"></a></td>
+						<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}"
+							th:text="${ruche.essaim?.nom}"></a></td>
+						<td th:if="${session.voirInactif}"
+							th:text="${ruche.active}? #{oui} : #{non}"></td>
 						<td th:text="${ruche.dateAcquisition}"></td>
-						<td class="num" th:text="${#numbers.formatDecimal(ruche.poidsVide,1,2,'DEFAULT')}"></td>
+						<td class="num"
+							th:text="${#numbers.formatDecimal(ruche.poidsVide,1,2,'DEFAULT')}"></td>
 						<td class="num"
 							th:text="${ec == null}?'':${#numbers.formatInteger(ec.valeur,2)}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}">
 						</td>
@@ -185,15 +195,15 @@
 		</th:block>
 		<h6 th:text="#{PasDeRecolte}" th:if="${#lists.isEmpty(recoltesListe)}"></h6>
 		<th:block th:unless="${#lists.isEmpty(poidsListe)}">
-			<h6 class="item" th:text="#{nbXRecoltes(${#arrays.length(recoltesListe)})}"></h6>
+			<h6 class="item"
+				th:text="#{nbXRecoltes(${#arrays.length(recoltesListe)})}"></h6>
 			<table class="table table-sm table-bordered">
 				<thead>
 					<tr>
 						<th th:text="#{recolte}"></th>
-						<td th:each="recolte : ${recoltesListe}">
-							<a th:href="@{'/recolte/'+${recolte.id}}"
-								th:text="${#temporals.format(recolte.date, 'yyyy/MM/dd')}"></a>
-						</td>
+						<td th:each="recolte : ${recoltesListe}"><a
+							th:href="@{'/recolte/'+${recolte.id}}"
+							th:text="${#temporals.format(recolte.date, 'yyyy/MM/dd')}"></a></td>
 						<th th:text="#{Total}"></th>
 					</tr>
 				</thead>
@@ -203,7 +213,8 @@
 						<td th:each="poids : ${poidsListe}"
 							th:text="${#numbers.formatDecimal(poids/1000.0,1,2,'DEFAULT')}">
 						</td>
-						<td th:text="${#numbers.formatDecimal(poidsTotal/1000.0,1,2,'DEFAULT')}"></td>
+						<td
+							th:text="${#numbers.formatDecimal(poidsTotal/1000.0,1,2,'DEFAULT')}"></td>
 					</tr>
 					<tr>
 						<th th:text="#{Ruches}"></th>
@@ -223,5 +234,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
