--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		/* globals DataTable */
 		const nomrucher = /*[[${rucher.nom}]]*/null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/null;
@@ -30,21 +30,23 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<a th:href="@{'/rucher/'+${rucher.id}}"
+						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
 					<th:block th:text="#{sep}+#{transhumances}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{#{urldoc}+'3834_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
-					aria-hidden="true"></a> <span class="padicons"> <input type="checkbox" id="groupe"
-						th:title="#{grouper}" th:checked="${group}" /> <label for="groupe" th:text="#{grouper}"></label>
+				<a th:href="@{#{urldoc}+'3834_3476563104'}" class="bi-book"
+					th:title="#{Doc}" target="_blank" aria-hidden="true"></a> <span
+					class="padicons"> <input type="checkbox" id="groupe"
+					th:title="#{grouper}" th:checked="${group}" /> <label for="groupe"
+					th:text="#{grouper}"></label>
 				</span>
 			</div>
 		</div>
@@ -64,8 +66,9 @@
 			</thead>
 			<tbody>
 				<tr th:each="hist : ${histo}" th:class="${hist.type} ? 'coloredrow'">
-					<td><a th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
+					<td><a
+						th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
 					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>
 					<td th:text="${#strings.listJoin(#lists.sort(hist.destProv),', ')}"></td>
 					<td th:if="${group}" th:text="${#lists.size(hist.ruche)}"></td>
@@ -77,5 +80,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
