--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -1,24 +1,23 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsruches}"></script>
-	<script th:inline="javascript">
-		/* exported google, pasderuchetxt,
-		ruchers, nomRuches,	urlruches, ruchertxt, lesRuchestxt,	ruchersmapzoom, _csrf_token
- 		*/
-		const ruchers = /*[[${ruchers}]]*/ null;
-		const nomRuches = /*[[${rucheNoms}]]*/ null;
-		const urlruches = /*[[@{/}]]*/ null;
-		const ruchertxt = /*[[#{rucher}]]*/ null;
-		const lesRuchestxt = /*[[#{Ruches}]]*/ null;
-		const pasderuchetxt = /*[[#{PasDeRuche}]]*/ null;
-		const ruchersmapzoom = /*[[${@environment.getProperty('ruchers.map.zoom')}]]*/ null
-		const _csrf_token = /*[[${_csrf.token}]]*/ null;
-	</script>
-	<script async defer th:src="${@environment.getProperty('gg.map.url')}"></script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
+<script th:inline="javascript">
+	/* exported google, pasderuchetxt,
+	ruchers, nomRuches,	urlruches, ruchertxt, lesRuchestxt,	ruchersmapzoom, _csrf_token
+	 */
+	const ruchers = /*[[${ruchers}]]*/null;
+	const nomRuches = /*[[${rucheNoms}]]*/null;
+	const urlruches = /*[[@{/}]]*/null;
+	const ruchertxt = /*[[#{rucher}]]*/null;
+	const lesRuchestxt = /*[[#{Ruches}]]*/null;
+	const pasderuchetxt = /*[[#{PasDeRuche}]]*/null;
+	const ruchersmapzoom = /*[[${@environment.getProperty('ruchers.map.zoom')}]]*/null
+	const _csrf_token = /*[[${_csrf.token}]]*/null;
+</script>
+<script async defer th:src="${@environment.getProperty('gg.map.url')}"></script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -31,8 +30,8 @@
 			</div>
 			<div class="col">
 				<input type="text" th:placeholder="#{recherche}" id="searchtext" />
-				<span class="padicons">
-					<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked />
+				<span class="padicons"> <input type="checkbox"
+					id="dragMarker" th:title="#{markerFixes}" checked />
 				</span>
 			</div>
 		</div>
@@ -40,5 +39,4 @@
 	<div id="map"></div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
