--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsol}"></script>
-	<script th:replace="~{include :: jsGpOsmPluginOpenLayers}"></script>
-	<script th:replace="~{include :: jsruchesnom('rucherListeOl')}"></script>
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsol}"></script>
+<script th:replace="~{include :: jsGpOsmPluginOpenLayers}"></script>
+<script th:replace="~{include :: jsruchesnom('rucherListeOl')}"></script>
+<script th:inline="javascript">
 		/* exported ol, ruchers, nomRuches, lesRucherstxt,	lesRuchestxt, pasderuchetxt, 
 		ruchertxt, couchemarqueursrucherstxt, ignCarteLiscense,
 		pleinecrantxt, urlruches, _csrf_token, bootstrap */
@@ -22,15 +22,14 @@
 		const _csrf_token = /*[[${_csrf.token}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => rucherListeIgn(false));
 	</script>
-	<script th:replace="~{include :: cssol}"></script>
-	<script th:replace="~{include :: cssGpPluginOpenLayers}"></script>
-	<style>
-		.ol-rotate {
-			top: 4em;
-		}
-	</style>
+<script th:replace="~{include :: cssol}"></script>
+<script th:replace="~{include :: cssGpPluginOpenLayers}"></script>
+<style>
+.ol-rotate {
+	top: 4em;
+}
+</style>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -42,11 +41,12 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
-					role="button" th:attr="data-bs-content=#{aiderucherlisteignmarkers}"></a>
-				<input type="text" th:placeholder="#{recherche}" id="searchtext" />
-				<span class="padicons">
-					<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked />
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
+					data-bs-trigger="focus" tabindex="0" role="button"
+					th:attr="data-bs-content=#{aiderucherlisteignmarkers}"></a> <input
+					type="text" th:placeholder="#{recherche}" id="searchtext" /> <span
+					class="padicons"> <input type="checkbox" id="dragMarker"
+					th:title="#{markerFixes}" checked />
 				</span>
 			</div>
 		</div>
@@ -58,5 +58,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
