--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		/* globals DataTable */
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
@@ -24,7 +24,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}">Menu</nav>
 	<div class="container-fluid">
@@ -33,13 +32,14 @@
 				<h1 class="item" th:text="#{rucheTypes}"></h1>
 			</div>
 			<div class="col">
-				<a th:href="@{/rucheType/cree}" class="bi-plus-lg" th:title="#{ajouterRucheType}" aria-hidden="true">
-				</a>
+				<a th:href="@{/rucheType/cree}" class="bi-plus-lg"
+					th:title="#{ajouterRucheType}" aria-hidden="true"> </a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm" id="ruchetypes">
+		<table class="table table-bordered table-striped table-sm"
+			id="ruchetypes">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
@@ -51,10 +51,12 @@
 			</thead>
 			<tbody>
 				<tr th:each="rucheType : ${rucheTypes}">
-					<td><a th:href="@{'/rucheType/'+${rucheType.id}}" th:text="*{rucheType.nom}"></a></td>
+					<td><a th:href="@{'/rucheType/'+${rucheType.id}}"
+						th:text="*{rucheType.nom}"></a></td>
 					<td class="num" th:text="*{rucheType.nbCadresMax}"></td>
 					<td class="num" th:text="${nbRuchesEssaim[rucheTypeStat.index]}"></td>
-					<td class="num" th:text="${nbRuchesSansEssaim[rucheTypeStat.index]}"></td>
+					<td class="num"
+						th:text="${nbRuchesSansEssaim[rucheTypeStat.index]}"></td>
 					<td th:text="${rucheType.commentaire}"></td>
 				</tr>
 			</tbody>
@@ -62,5 +64,4 @@
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
